deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pankaj-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: organic-ghee

  template:
    metadata:
      labels:
        app: organic-ghee

    spec:
      containers:
        - name: gheecontainers-container
          image: pankajs111/organic-ghee

          ports:
            - containerPort: 5656
---
apiVersion: v1
kind: Service

metadata:
  name: pankaj-service

spec:
  selector:
    app: organic-ghee

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5656

  type: ClusterIP
