http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: organic-ghee-http-route

spec:
  parentRefs:
    - name: organic-ghee-gateway

  rules:
    - backendRefs:
        - name: organic-ghee-service
          port: 80
